--- a/AntsVsZombies/Config/DefaultInput.ini
+++ b/AntsVsZombies/Config/DefaultInput.ini
@@ -74,7 +74,8 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="SetDestination",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +AxisMappings=(AxisName="Move Forward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Right/Left",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move Forward/Backward",Scale=-1.000000,Key=S)
