--- a/AntsVsZombies/AntsVsZombies.uproject
+++ b/AntsVsZombies/AntsVsZombies.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{70CF9260-4C6D-15C2-DCAC-44AEAD2C51AF}",
+	"EngineAssociation": "5.0",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
