health bar & pickup complete

--- a/AntsVsZombies/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AntsVsZombies/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -147,7 +147,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/TopDown/Enemies/Beetle
+ContentBrowserDrawer.SelectedPaths=/Game/antUI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -215,6 +215,8 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
+OpenAssetsAtExit=/Game/antUI/TestHealthUI/WB_HealthBar.WB_HealthBar
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -937,6 +939,101 @@ AnimStateNode.Events=True
 Beetle_Skeleton_AnimBlueprint_C.RootMotion=True
 Beetle_Skeleton_AnimBlueprint_C.Notifies=True
 Beetle_Skeleton_AnimBlueprint_C.Montage=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldPartitionRuntimeSpatialHash.RuntimeSettings=True
+WorldSettings.WorldPartition=True
+WorldSettings.Broadphase=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+MainMenu_C.Tick=True
+MainMenu_C.Classes=True
+MainMenu_C.Game=True
+MainMenu_C.GameMode=True
+MainMenu_C.Events=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+BP_Pickup_Item_C.Tick=True
+BP_Pickup_Item_C.Replication=True
+BP_Pickup_Item_C.Rendering=True
+BP_Pickup_Item_C.Collision=True
+BP_Pickup_Item_C.Actor=True
+BP_Pickup_Item_C.Input=True
+BP_Pickup_Item_C.HLOD=True
+BP_Pickup_Item_C.WorldPartition=True
+BP_Pickup_Item_C.Events=True
+Brush.WorldPartition=True
+BlockingVolume.TransformCommon=True
+BlockingVolume.HLOD=True
+BlockingVolume.Collision=True
+BlockingVolume.Navigation=True
+BlockingVolume.BrushSettings=True
+BlockingVolume.Tags=True
+BlockingVolume.Cooking=True
+BlockingVolume.Replication=True
+BlockingVolume.WorldPartition=True
+BlockingVolume.Actor=True
+BP_Pickup_Item_C.TransformCommon=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1053,9 +1150,11 @@ bConvertSceneUnit=False
 LastLogListing=PIE
 
 [PlacementMode]
+RecentlyPlaced=/Game/antUI/TestHealthUI/BP_Pickup_Item.BP_Pickup_Item;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/LabAssets/TestTube.TestTube;
 RecentlyPlaced=/Game/TopDown/Enemies/EnemyBP.EnemyBP;
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/lambert1.lambert1;
@@ -1071,23 +1170,21 @@ RecentlyPlaced=/Game/Ant_Game_Levels_polySurface8.Ant_Game_Levels_polySurface8;
 RecentlyPlaced=/Game/Ant_Game_Levels_polySurface7.Ant_Game_Levels_polySurface7;
 RecentlyPlaced=/Game/Ant_Game_Levels_polySurface4.Ant_Game_Levels_polySurface4;
 RecentlyPlaced=/Game/Ant_Game_Levels_pCube51.Ant_Game_Levels_pCube51;
-RecentlyPlaced=/Game/Ant_Game_Levels_pCube50.Ant_Game_Levels_pCube50;
-RecentlyPlaced=/Game/Ant_Game_Levels_pCube49.Ant_Game_Levels_pCube49;
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [DetailPropertyExpansion]
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object="\"Object.SkeletalMeshes\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+Object="\"Object\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 EnemyBP_C=
@@ -1099,6 +1196,30 @@ PreviewMeshCollection="\"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" "
 EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+HorizontalBox="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+PanelWidget="\"Object\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" "
+WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
+WorldPartitionRuntimeSpatialHash="\"Object\" "
+WorldPartitionRuntimeHash="\"Object\" "
+BrushComponent="\"Object\" "
+LightmassPrimitiveSettingsObject="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
+StaticMeshActor=
+AssetViewerSettings="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+Image="\"Object\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" "
+CanvasPanel="\"Object\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2041,8 +2162,10 @@ SkeletonEditor.TimeStamp=2022.04.24-14.06.53
 SkeletonEditor.LastCompileMethod=Unknown
 PinnedCommandList.TimeStamp=2022.04.24-14.06.52
 PinnedCommandList.LastCompileMethod=Unknown
-SequencerWidgets.TimeStamp=2022.04.24-14.06.53
-SequencerWidgets.LastCompileMethod=Unknown
+SequencerWidgets.TimeStamp=2022.08.15-13.27.28
+SequencerWidgets.LastCompileMethod=External
+TextureEditor.TimeStamp=2022.08.15-13.27.28
+TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2061,28 +2184,29 @@ FbxImportUI.Mesh=False
 SkeletalMeshComponent.Animation=True
 FbxImportUI.Animation=True
 AnimStateNode.Events=False
+StaticMeshActor.StaticMesh=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDown/Maps/TopDownMap
-MRUItem1=/Game/Maps/ThreeLevelMap
-MRUItem2=/Game/TopDown/AntArt/Import/AntAnimated_Skeleton_AnimBlueprint
-MRUItem3=/Game/TopDown/Enemies/Beetle/Beetle
-MRUItem4=/Game/StarterContent/Maps/StarterMap
-MRUItem5=/Game/TopDown/AntArt/Import/AntAnimated_Anim_Fire
-MRUItem6=/Game/TopDown/AntArt/Import/AntAnimated
-MRUItem7=/Game/TopDown/AntArt/Import/AntAnimated_Skeleton
-MRUItem8=/Game/TopDown/SFX/Death/DeathCUE
-MRUItem9=/Game/TopDown/SFX/Damage/DamageCUE
-MRUItem10=/Game/TopDown/Blueprints/Bullet_BP
-MRUItem11=/Game/TopDown/Enemies/EnemyBP
-MRUItem12=/Game/Characters/Mannequin_UE4/Materials/M_MannequinUE4_ChestLogo_2
-MRUItem13=/Game/Characters/Mannequin_UE4/Materials/M_MannequinUE4_Body_2
-MRUItem14=/Game/TopDown/SFX/Gun_Shot_Cue
-MRUItem15=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem16=/Game/TopDown/Maps/Testing_Level
-MRUItem17=/Game/TopDown/Blueprints/BP_TopDownGameMode
-MRUItem18=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem19=/Game/Ant_Game_Levels_pCube13
+MRUItem0=/Game/antUI/ant_png_2
+MRUItem1=/Game/TopDown/Maps/TopDownMap
+MRUItem2=/Game/LabAssets/TestTube
+MRUItem3=/Game/antUI/TestHealthUI/BP_Pickup_Item
+MRUItem4=/Game/Maps/ThreeLevelMap
+MRUItem5=/Game/antUI/TestHealthUI/WB_HealthBar
+MRUItem6=/Game/antUI/uiHealth
+MRUItem7=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem8=/Game/antUI/uiHealth2
+MRUItem9=/Game/MenuBlueprints/MainMenu
+MRUItem10=/Game/TopDown/AntArt/Import/AntAnimated_Skeleton_AnimBlueprint
+MRUItem11=/Game/TopDown/Enemies/Beetle/Beetle
+MRUItem12=/Game/StarterContent/Maps/StarterMap
+MRUItem13=/Game/TopDown/AntArt/Import/AntAnimated_Anim_Fire
+MRUItem14=/Game/TopDown/AntArt/Import/AntAnimated
+MRUItem15=/Game/TopDown/AntArt/Import/AntAnimated_Skeleton
+MRUItem16=/Game/TopDown/SFX/Death/DeathCUE
+MRUItem17=/Game/TopDown/SFX/Damage/DamageCUE
+MRUItem18=/Game/TopDown/Blueprints/Bullet_BP
+MRUItem19=/Game/TopDown/Enemies/EnemyBP
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward/Backward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Right/Left,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,
@@ -2173,9 +2297,17 @@ EnemyBP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 CapsuleComponent=
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
+BP_TopDownCharacter_C=
+PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+WB_HealthBar_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+WorldSettings=WorldSettings.WorldPartition.None,
+WorldPartitionRuntimeSpatialHash=
+BP_Pickup_Item_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+SceneComponent=
 
 [AssetEditorToolkitTabLocation]
-/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=1
+/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter=0
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=1
 /Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode=1
 /Game/TopDown/Enemies/Materials/M_MannequinUE4_ChestLogo_2.M_MannequinUE4_ChestLogo_2=1
@@ -2191,6 +2323,13 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 /Game/TopDown/AntArt/Import/AntAnimated_Anim_Fire.AntAnimated_Anim_Fire=0
 /Game/TopDown/Enemies/Beetle/Beetle.Beetle=1
 /Game/TopDown/Enemies/Beetle/Beetle_Skeleton_AnimBlueprint.Beetle_Skeleton_AnimBlueprint=0
+/Game/MenuBlueprints/MainMenu.MainMenu=1
+/Game/antUI/uiHealth2.uiHealth2=1
+/Game/antUI/uiHealth.uiHealth=0
+/Game/LabAssets/TestTube.TestTube=0
+/Game/antUI/TestHealthUI/BP_Pickup_Item.BP_Pickup_Item=0
+/Game/antUI/ant_png_2.ant_png_2=0
+/Game/antUI/TestHealthUI/WB_HealthBar.WB_HealthBar=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2366,4 +2505,80 @@ bAutoDeleteAssets=True
 bDetectChangesOnStartup=True
 bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
+
+[WidgetTemplatesExpanded]
+Common=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
 
