--- a/AntsVsZombies/AntsVsZombies.uproject
+++ b/AntsVsZombies/AntsVsZombies.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "5.0",
+	"EngineAssociation": "{2B7017C2-4332-5FEC-0701-3B855AEA705A}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
