--- a/AntsVsZombies/Config/DefaultInput.ini
+++ b/AntsVsZombies/Config/DefaultInput.ini
@@ -76,6 +76,8 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="Pause",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Right)
 +AxisMappings=(AxisName="Move Forward/Backward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Move Right/Left",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Move Forward/Backward",Scale=-1.000000,Key=S)
