--- a/AntsVsZombies/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/AntsVsZombies/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -214,7 +214,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Maps/ThreeLevelMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -1247,6 +1247,38 @@ SkeletalMesh.ImportSettings=True
 SkeletalMesh.SkinWeights=True
 SkeletalMesh.RayTracing=True
 SkeletalMesh.Sampling=True
+uiHealth_C.Appearance=True
+uiHealth_C.Designer=True
+uiHealth_C.Input=True
+uiHealth_C.Interaction=True
+uiHealth_C.Performance=True
+uiHealth_C.Layout=True
+uiHealth_C.Behavior=True
+uiHealth_C.Render Transform=True
+uiHealth_C.Localization=True
+uiHealth_C.Accessibility=True
+uiHealth_C.Clipping=True
+uiHealth_C.Navigation=True
+uiHealth2_C.Appearance=True
+uiHealth2_C.Designer=True
+uiHealth2_C.Input=True
+uiHealth2_C.Interaction=True
+uiHealth2_C.Performance=True
+uiHealth2_C.Layout=True
+uiHealth2_C.Behavior=True
+uiHealth2_C.Render Transform=True
+uiHealth2_C.Localization=True
+uiHealth2_C.Accessibility=True
+uiHealth2_C.Clipping=True
+uiHealth2_C.Navigation=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.LOD=True
+SkeletalMeshComponent.MaterialParameters=True
+SkeletalMeshComponent.TextureStreaming=True
+SkeletalMeshComponent.RayTracing=True
+BP_TopDownCharacter_C.Cooking=True
+BP_TopDownCharacter_C.DataLayers=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1392,14 +1424,14 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 InputSettings="\"Object\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" "
-Object="\"Object\" "
-StaticMeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" "
-SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Tags.ComponentTags\" "
+Object="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+StaticMeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object\" \"Object.Lighting.LightmassSettings\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 EnemyBP_C=
 Character=
 Pawn=
@@ -1422,8 +1454,8 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 BrushComponent="\"Object\" "
 LightmassPrimitiveSettingsObject="\"Object\" "
-CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 StaticMeshActor=
 AssetViewerSettings="\"Object\" "
 StaticMesh="\"Object\" "
@@ -1452,7 +1484,7 @@ BlendSpace="\"Object\" "
 AnimationAsset="\"Object\" "
 AnimGraphNode_BlendSpacePlayer="\"Object\" "
 AnimGraphNode_BlendSpaceBase="\"Object\" "
-MovementComponent="\"Object\" "
+MovementComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ArrowComponent="\"Object\" \"Object.Tags.ComponentTags\" "
 CharacterMovementComponent="\"Object\" \"Object.Tags.ComponentTags\" "
@@ -1566,6 +1598,10 @@ WmfMediaSettings="\"Object\" "
 pauseMenu_C="\"Object\" "
 UserWidget="\"Object\" "
 mainmenu_C="\"Object\" "
+uiHealth_C="\"Object\" "
+uiHealth2_C="\"Object\" "
+K2Node_InputKey="\"Object\" "
+BP_TopDownCharacter_C="\"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2539,26 +2575,26 @@ PropertyWrapper.Variable=False
 K2Node_VariableGet.Variable=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/ThreeLevelMap
-MRUItem1=/Game/Maps/MainMenu
-MRUItem2=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
-MRUItem3=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem4=/Game/MenuBlueprints/MainMenu
-MRUItem5=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem6=/Game/antUI/mainmenu
-MRUItem7=/Game/antUI/pauseMenu
-MRUItem8=/Game/TopDown/Enemies/BP_TurretAnt
-MRUItem9=/Game/Animations/BeetleBS
-MRUItem10=/Game/TopDown/Enemies/EnemyBP
-MRUItem11=/Game/Animations/AntBS
-MRUItem12=/Game/Animations/BeetleAnimBP
-MRUItem13=/Game/Animations/AntAnimBP
-MRUItem14=/Game/TopDown/Enemies/Beetle/Beetle_Anim_Run
-MRUItem15=/Game/TopDown/Blueprints/Bullet_BP
-MRUItem16=/Game/TopDown/Enemies/BP_EnemyCharger
-MRUItem17=/Game/TopDown/Maps/TopDownMap
-MRUItem18=/Game/Maps/GioVersion
-MRUItem19=/Game/Sounds/mixkit-juicy-insect-fast-squish-324
+MRUItem0=/Game/TopDown/Blueprints/Bullet_BP
+MRUItem1=/Game/Maps/ThreeLevelMap
+MRUItem2=/Game/TopDown/Enemies/BP_TurretAnt
+MRUItem3=/Game/TopDown/Enemies/EnemyBP
+MRUItem4=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem5=/Game/antUI/uiHealth2
+MRUItem6=/Game/antUI/uiHealth
+MRUItem7=/Game/Maps/MainMenu
+MRUItem8=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin
+MRUItem9=/Game/MenuBlueprints/MainMenu
+MRUItem10=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem11=/Game/antUI/mainmenu
+MRUItem12=/Game/antUI/pauseMenu
+MRUItem13=/Game/Animations/BeetleBS
+MRUItem14=/Game/Animations/AntBS
+MRUItem15=/Game/Animations/BeetleAnimBP
+MRUItem16=/Game/Animations/AntAnimBP
+MRUItem17=/Game/TopDown/Enemies/Beetle/Beetle_Anim_Run
+MRUItem18=/Game/TopDown/Enemies/BP_EnemyCharger
+MRUItem19=/Game/TopDown/Maps/TopDownMap
 
 [DetailCustomWidgetExpansion]
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward/Backward,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Move Right/Left,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Pause,
@@ -2647,7 +2683,7 @@ MaterialInstanceConstant=
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 EnemyBP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-CapsuleComponent=
+CapsuleComponent=CapsuleComponent.Collision.Collision,CapsuleComponent.Physics.ConstraintsGroup,
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 BP_TopDownCharacter_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -2666,7 +2702,7 @@ NavMeshBoundsVolume=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_EnemyCharger_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PawnSensingComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 BP_TurretAnt_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Collision.Collision,
 ArrowComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 StaticMeshComponent=StaticMeshComponent.TransformCommon.Transform,
 Bullet_BP_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
